--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-schedule": "^1.3.2",
     "qr-image": "^3.2.0",
     "tmi.js": "^1.5.0",
-    "uniqid": "^5.2.0"
+    "uniqid": "^5.2.0",
+    "webhook-discord": "^3.7.3"
   }
 }
