--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
+    "opennode": "^1.2.1",
     "qr-image": "^3.2.0",
     "sockjs-client": "^1.4.0",
     "tmi.js": "^1.5.0",
