--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "discord-webhook-node": "^1.1.8",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
