--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sockjs-client": "^1.4.0",
     "tmi.js": "^1.5.0",
     "uniqid": "^5.2.0",
+    "url-parse": "^1.5.1",
     "webhook-discord": "^3.7.5"
   }
 }
