--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@iota/iota.js": "github:iotaledger/iota.js#chrysalis",
+    "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "discord-webhook-node": "^1.1.8",
     "express": "^4.17.1",
